tdf#142741 and tdf#38187 Set valid pages for footnote links PDF export.

Change-Id: I7c00e1a522a51796c9f543a74bd8abcee6792faf